--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,497 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  /* Colors */
+  --color-primary-50: #ba2d8e;
+  --color-primary-100: #cf6cb0;
+  --color-primary-200: #dd96c7;
+  --color-primary-300: #f1d5e8;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-secondary-50: #72c6a4;
+  --color-secondary-200: #8ed1b6;
+  --color-secondary-300: #aaddc8;
+  --color-secondary-400: #d5eee4;
+  --color-secondary-500: #f1f9f6;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  --color-tertiary: #fbcc0d;
+
+  --default-font-size: 1.6rem;
+
+  --color-grey-light-1: #f7f7f7;
+  --color-grey-light-2: #eee;
+  --color-grey-dark: #777;
+  --color-grey-dark-2: #999;
+  --color-grey-dark-3: #333;
+
+  /* Font family */
+  --font-family-base: 'Lato', sans-serif;
+  --font-family-monospace: Menlo, 'IBM Plex Mono', Menlo, monospace;
+  --font-family-heading: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+    Arial, sans-serif;
+  --font-family-nav: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Arial,
+    sans-serif;
+}
+/* resets */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-family: var(--font-family-base);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  line-height: 1.6;
+  font-size: 62.5%;
+  overflow-x: hidden;
+  /* scroll-behavior: smooth; */
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  font-weight: 500;
+  line-height: 1.5;
+  color: #333;
+  overflow: hidden;
+  /* background: var(--color-background); */
+}
+/*
+  Remove list styles (bullets/numbers)
+*/
+ol,
+ul {
+  list-style: none;
+}
+img {
+  max-width: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Prevent Text Overflow */
+p,
+li,
+h1,
+h2,
+h3,
+h4 {
+  /* Help prevent overflow of long words/names/URLs */
+  word-break: break-word;
+
+  /* // Optional, not supported for all languages: */
+  hyphens: auto;
+
+  /* // Clear top margin */
+  margin-top: 0;
+}
+
+/* // Button Styling Resets */
+a.button {
+  text-decoration: none;
+}
+
+/* // Reset default button styles */
+button.button {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  padding: 0;
+  cursor: pointer;
+
+  @media screen and (-ms-high-contrast: active) {
+    border: 2px solid currentcolor;
+  }
+}
+
+/* // Flex alignment comes in handy should you add icons in the future, or impose width restrictions. */
+
+a.button,
+button.button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  /* Visual */
+  /*  ... existing styles */
+  /*  background-color: $btnColor; */
+  color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
+
+  padding: 0.25em 0.75em;
+  min-width: 10ch;
+  min-height: 44px;
+}
+
+a.button:focus,
+button.button:focus {
+  outline-style: solid;
+  outline-color: transparent;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  display: inline-block;
+  border: none;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  line-height: 1;
+  background: transparent;
+  /* -webkit-appearance: none; */
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button,
+fieldset,
+input,
+legend,
+select,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+}
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--color-secondary);
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.heading-primary {
+  font-weight: 900;
+  font-size: 5.8rem;
+  line-height: 1.05;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+  text-transform: capitalize;
+  color: var(--color-primary);
+  z-index: 10;
+  box-shadow: 0 1.5rem 4rem rgba(#333, 0.7);
+  transition: all 0.2s;
+}
+
+.heading-secondary {
+  font-size: 4.5rem;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+  font-weight: 400;
+  /* &--center {
+    color: var(--color-primary);
+    font-size: 3.5rem;
+    text-align: center;
+    line-height: 1.05;
+  } */
+}
+
+.heading-secondary--center {
+  color: var(--color-primary);
+  font-size: 3.5rem;
+  text-align: center;
+  line-height: 1.05;
+}
+
+.heading-tertiary {
+  font-size: 3rem;
+  margin-bottom: 3.5rem;
+  text-transform: capitalize;
+}
+
+.center {
+  text-align: center;
+}
+
+/**************************/
+/* HEADER */
+/**************************/
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgb(52, 170, 122);
+  background: linear-gradient(
+    184deg,
+    rgba(52, 170, 122, 1) 0%,
+    rgba(114, 198, 164, 0.894) 100%
+  );
+
+  /* Because we want header to be sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+  position: relative;
+}
+
+.logo {
+  height: 4.8rem;
+}
+
+/**************************/
+/* NAVIGATION */
+/**************************/
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 4.8rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: var(--color-grey-light-2);
+  font-weight: 700;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(#222, 0.2);
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: var(--color-primary-50);
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: var(--color-primary-50);
+
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(#222, 0.2);
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: var(--color-primary-100);
+  transform: scaleX(1.4) scaleY(1.6);
+}
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name='close-outline'] {
+  display: none;
+}
+
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
+/**************************/
+/* HERO SECTION */
+/**************************/
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 0;
+
+  /* padding: 4.8rem 0 9.6rem 0; */
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+
+  /* padding: 0 3.2rem; */
+  /* display: grid; */
+  /* grid-template-columns: 1fr; */
+  /* gap: 9.6rem; */
+  /* align-items: center; */
+}
+
+.hero-video {
+  display: grid;
+  max-width: 100%;
+  max-height: 90vh;
+
+  position: relative;
+}
+
+video {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  min-width: 80%;
+  height: auto;
+  min-height: 100%;
+
+  /* background: #000; */
+  background-size: cover;
+  overflow: hidden;
+  padding: 3rem 10% 5rem 10%;
+}
+
+/**************************/
+/* HOW IT WORKS SECTION */
+/**************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  color: var(--color-primary-50);
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  padding-bottom: 3rem;
+}
+
+.step-description-secondary {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  padding-bottom: 4.5rem;
+}
+
+.step-img-box {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* background-image: url(./assets/nest-vision.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.step-img-box-one {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-image: url(./assets/nest-vision.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: '';
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent's width */
+  padding-bottom: 60%;
+
+  background-color: var(--color-secondary-400);
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: var(--color-secondary-300);
+  z-index: -1;
+}
+
+.step-img {
+  width: 45%;
+  /* z-index: 10; */
 }
