--- a/src/index.css
+++ b/src/index.css
@@ -364,7 +364,7 @@ textarea {
 /**************************/
 
 .section-hero {
-  background-color: #fdf2e9;
+  /* background-color: #fdf2e9; */
   padding: 0;
 
   /* padding: 4.8rem 0 9.6rem 0; */
