--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
   --color-tertiary: #fbcc0d;
 
-  --default-font-size: 1.6rem;
+  --default-font-size: 1.8rem;
 
   --color-grey-light-1: #f7f7f7;
   --color-grey-light-2: #eee;
@@ -27,8 +27,8 @@
   --body-bg: linear-gradient(120deg, hsl(0, 0%, 18%) 10%, hsl(0, 0%, 2%));
   --inner-bg: black;
 
-  --card-inner-width: 14em;
-  --card-inner-height: 21em;
+  --card-inner-width: 22em;
+  --card-inner-height: 35em;
 
   /* animation props */
   --ty-duration: 0.6s;
@@ -63,7 +63,7 @@ html {
   line-height: 1.6;
   font-size: 62.5%;
   overflow-x: hidden;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 
 body {
@@ -202,14 +202,8 @@ textarea {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.subheading {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: var(--color-secondary);
-  text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: 0.75px;
+.grid--center-v {
+  align-items: center;
 }
 
 .heading-primary,
@@ -232,6 +226,21 @@ textarea {
   z-index: 10;
   box-shadow: 0 1.5rem 4rem rgba(#333, 0.7);
   transition: all 0.2s;
+}
+
+.heading-primary-white {
+  font-weight: 800;
+  font-size: 5.8rem;
+  line-height: 1.05;
+  letter-spacing: -0.5px;
+  margin-bottom: 2.8rem;
+  text-transform: capitalize;
+  color: #f7f7f7;
+  z-index: 10;
+  box-shadow: 0 1.5rem 4rem rgba(#333, 0.7);
+  transition: all 0.2s;
+
+  padding-top: 1rem;
 }
 
 .heading-secondary {
@@ -261,8 +270,68 @@ textarea {
   text-transform: capitalize;
 }
 
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--color-secondary);
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
+
 .center {
   text-align: center;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 40px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
+  /* Put transition on original "state" */
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: var(--color-secondary-50);
+  color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: var(--color-secondary-400);
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  border: 3px solid var(--color-primary-50);
+
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: var(--color-secondary-50);
+
+  border: 3px solid var(--color-secondary-50);
+
+  /* Trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
 }
 
 /**************************/
@@ -288,6 +357,10 @@ textarea {
 
 .logo {
   height: 4.8rem;
+}
+
+.bizz-logo {
+  height: 11.8rem;
 }
 
 /**************************/
@@ -379,23 +452,42 @@ textarea {
 
 .section-hero {
   /* background-color: #fdf2e9; */
-  padding: 0;
+  background-image: url(./assets/bizznest-banner.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-  /* padding: 4.8rem 0 9.6rem 0; */
+  padding: 9.8rem 0 12.6rem 0;
 }
 
 .hero {
   max-width: 130rem;
   margin: 0 auto;
 
-  /* padding: 0 3.2rem; */
-  /* display: grid; */
-  /* grid-template-columns: 1fr; */
-  /* gap: 9.6rem; */
-  /* align-items: center; */
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
 }
 
-.hero-video {
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+  color: #fff;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
+}
+
+/* .hero-video {
   display: grid;
   max-width: 100%;
   max-height: 90vh;
@@ -412,18 +504,18 @@ video {
   height: auto;
   min-height: 100%;
 
-  /* background: #000; */
+
   background-size: cover;
   overflow: hidden;
   padding: 3rem 10% 5rem 10%;
-}
+} */
 
 /**************************/
 /* HOW IT WORKS SECTION */
 /**************************/
 
 .section-how {
-  padding: 9.6rem 0;
+  padding: 12.6rem 0;
 }
 
 .step-number {
@@ -437,7 +529,7 @@ video {
 .step-description {
   font-size: 1.8rem;
   line-height: 1.8;
-  padding-bottom: 3rem;
+  padding-bottom: 4rem;
 }
 
 .step-description-secondary {
@@ -506,16 +598,117 @@ video {
   /* z-index: 10; */
 }
 
+/**************************/
+/* MEALS SECTION */
+/**************************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+.meal:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 100px;
+  font-weight: 600;
+}
+
+.tag--vegetarian {
+  background-color: #72c6a4;
+}
+.tag--vegan {
+  background-color: #94d82d;
+}
+.tag--paleo {
+  background-color: #ffd43b;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #ba2d8e;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.all-recipes {
+  text-align: center;
+  font-size: 1.8rem;
+}
+
+/* HELPER/SETTINGS CLASSES */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .card {
   background: var(--card-bg, none);
   color: var(--card-default-color, white);
-  padding: var(--card-padding, 1rem);
+  padding: var(--card-padding, 3rem);
 }
 
 /* container */
 .card > .card-container {
-  width: var(--card-inner-width, 14em);
-  height: var(--card-inner-height, 21em);
+  /* width: var(--card-inner-width, 24em); */
+  /* height: var(--card-inner-height, 35em); */
+  width: 22rem;
+  height: 34rem;
 
   position: relative;
   overflow: hidden;
