--- a/src/index.css
+++ b/src/index.css
@@ -457,7 +457,8 @@ textarea {
   background-position: center;
   background-size: cover;
 
-  padding: 9.8rem 0 12.6rem 0;
+  /* padding: 9.8rem 0 12.6rem 0; */
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
@@ -515,7 +516,7 @@ video {
 /**************************/
 
 .section-how {
-  padding: 12.6rem 0;
+  padding: 9.6rem 0;
   position: relative;
 }
 
@@ -567,12 +568,10 @@ video {
 
   align-items: center;
   justify-content: center;
-  background-image: url(./assets/about-bizz.png);
+  /* background-image: url(./assets/about-bizz.png);
   background-position: center;
   background-repeat: no-repeat;
-
-  min-width: 100%;
-  min-height: 100%;
+/*  */
 }
 
 .step-img-box::before,
@@ -588,9 +587,6 @@ video {
 }
 
 .step-img-box::before {
-  width: 60%;
-  height: 60%;
-
   /* 60% of parent's width  */
   padding-bottom: 60%;
 
@@ -607,7 +603,6 @@ video {
 
 .step-img {
   max-width: 100%;
-  min-height: 110vh;
 
   z-index: 10;
 }
