--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color-primary-200: #dd96c7;
   --color-primary-300: #f1d5e8;
 
+  --color-secondary-10: #5eba95;
   --color-secondary-50: #72c6a4;
   --color-secondary-200: #8ed1b6;
   --color-secondary-300: #aaddc8;
@@ -222,10 +223,37 @@ textarea {
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
   text-transform: capitalize;
-  color: var(--color-primary);
+  color: var(--color-grey-dark-3);
   z-index: 10;
   box-shadow: 0 1.5rem 4rem rgba(#333, 0.7);
   transition: all 0.2s;
+}
+
+.heading-primary-styled {
+  font-weight: 900;
+  font-size: 6rem;
+  line-height: 1.05;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+  text-transform: uppercase;
+  color: var(--color-grey-dark-3);
+  z-index: 10;
+  box-shadow: 0 1.5rem 4rem rgba(#333, 0.7);
+  background-image: linear-gradient(
+    to right,
+    var(--color-secondary-10),
+    var(--color-secondary-200),
+    var(--color-secondary-50)
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s;
+}
+
+.heading-primary-styled:hover {
+  transform: scale(1.1);
+  text-shadow: 0.5rem 1rem 2rem rgba(#333, 0.2);
 }
 
 .heading-primary-white {
@@ -248,7 +276,7 @@ textarea {
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 9.6rem;
-  font-weight: 400;
+
   /* &--center {
     color: var(--color-primary);
     font-size: 3.5rem;
@@ -266,18 +294,19 @@ textarea {
 
 .heading-tertiary {
   font-size: 3rem;
+  line-height: 1.2;
   margin-bottom: 3.5rem;
   text-transform: capitalize;
 }
 
 .subheading {
   display: block;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 500;
-  color: var(--color-secondary);
+  color: var(--color-primary-100);
   text-transform: uppercase;
-  margin-bottom: 1.6rem;
-  letter-spacing: 0.75px;
+  margin-bottom: 1.5rem;
+  letter-spacing: 0.85px;
 }
 
 .center {
@@ -515,29 +544,30 @@ video {
 /* HOW IT WORKS SECTION */
 /**************************/
 
-.section {
+.section,
+.section-bg {
   padding: 12.6rem 0;
   position: relative;
 }
 
-.section::before {
+.section-bg::before {
   content: '';
   position: absolute;
   top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
-  opacity: 0.05;
+  opacity: 0.06;
   background-image: url(./assets/background-matte.png);
   background-repeat: no-repeat;
-  background-position: 80% 0;
+  background-position: 50% 0;
   background-size: cover;
   z-index: 0;
 }
 
 .step-number {
   font-weight: 500;
-  color: var(--color-secondary-50);
+  color: var(--color-secondary-10);
   font-size: 9.6rem;
   font-weight: 600;
   margin-bottom: 1.2rem;
@@ -930,41 +960,6 @@ video {
   transition-delay: 0s;
 }
 
-@media (max-width: 44em) {
-  .grid--3-cols,
-  .grid--4-cols {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .diets {
-    grid-column: 1 / -1;
-    justify-self: center;
-  }
-
-  .heading-secondary {
-    margin-bottom: 4.8rem;
-  }
-
-  .pricing-plan {
-    width: 100%;
-  }
-
-  .grid--footer {
-    grid-template-columns: repeat(6, 1fr);
-  }
-
-  .logo-col,
-  .address-col {
-    grid-column: span 3;
-  }
-
-  .nav-col {
-    grid-row: 1;
-    grid-column: span 2;
-    margin-bottom: 3.2rem;
-  }
-}
-
 /**************************/
 /* BELOW 1200px (Landscape Tablets) */
 /**************************/
@@ -1039,9 +1034,9 @@ video {
     height: 2.4rem;
   }
 
-  /* .step-number {
+  .step-number {
     font-size: 7.4rem;
-  } */
+  }
 
   .meal-content {
     padding: 2.4rem 3.2rem 3.2rem 3.2rem;
@@ -1207,6 +1202,21 @@ video {
 
   .section-hero {
     padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .section-bg::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.1;
+    background-image: url(./assets/background-matte.png);
+    background-repeat: no-repeat;
+    background-position: 6% 0;
+    background-size: cover;
+    z-index: 0;
   }
 
   .hero {
